# icir_cleanroom

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml
config/gas_attraction/: idw.yaml  map_data.yaml
include/icir_cleanroom/: gas_attraction_layer.hpp  gas_sensor_plugin.hpp  gas_source_plugin.hpp
launch/: cleanroom_spawn.launch.py  empty_nav2.launch.py  obstacle_spawn.launch.py
map/: cleanroom.pgm  cleanroom.yaml  empty.yaml  obstacle_room.pgm  obstacle_room.yaml
rviz/: default.rviz
scripts/: gas_concentration_marker_node.py  gas_patrol_node.py  gas_source_map_node.py
src/: gas_attraction_layer.cpp  gas_sensor_plugin.cpp  gas_source_plugin.cpp
src/icir_cleanroom/: CMakeLists.txt  package.xml  plugin_description.xml
src/icir_cleanroom/config/: nav2_params.yaml
src/icir_cleanroom/include/icir_cleanroom/: gas_attraction_layer.hpp  gas_source_plugin.hpp
src/icir_cleanroom/launch/: empty_nav2.launch.py  empty_spawn.launch.py
src/icir_cleanroom/rviz/: default.rviz
src/icir_cleanroom/scripts/: gas_ground_truth_debug_node.py  gas_patrol_node.py
src/icir_cleanroom/src/: gas_attraction_layer.cpp  gas_sensor_plugin.cpp  gas_source_plugin.cpp
src/icir_cleanroom/urdf/: tb3_with_gas_sensor.sdf  tb3_with_gas_sensor.urdf
src/icir_cleanroom/worlds/: empty.world
urdf/: model.config
worlds/: cleanroom.world  empty.world  obstacle_room.world
