<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>icir_cleanroom</name>
    <version>0.1.0</version>
    <description>ICIR cleanroom robot simulation package</description>
    <maintainer email="okpo2581@gmail.com">changgyukim</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>tf2_ros</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>pluginlib</depend>
    <depend>nav2_common</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
    </export>
</package>